--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@ h1{
     align-items: center;
     margin-bottom: 20px;
 }
+textarea{
+    padding: 20px;
+}
 .reload{
     cursor: pointer;
     height: 20px;
